style.css
body{
	margin:0;
	padding:0;
	}

.session_spy{
	position: relative;
	top: 10px;
	left: 20px;
	font-size: 24px;
	font-weight: bold;
	}

.me{
	float: right;
	position: relative;
	top: 8px;
	right: 5px;
	}

.header{
	width: 100%;
	background-color: #CDF;
	height: 40px;
	}

.ui-layout-north{
	background-color: #CDF;
	}

.ui-layout-west, .ui-layout-center, .ui-layout-north{
	padding: 0;
	}


#id_search{   
	font-family: monospace;
    font-size: 16px;
    margin-top: 8px;
    width: 100%;
	}



#list{
	list-style: none;
	font-family: monospace;
	}

#list .item{
	padding:5px 5px 5px 10px;
	}

#list .item:hover{
	background-color: #CDF;
	cursor: pointer;
	}

#list .item.active{
	background-color: #DFC;
	}
	

#data{
	line-height: 1.2em;
	}

.array ul{
	display: none;
	margin-left: 20px;
	margin-bottom: 3px;
	}



#data .no-data{
	text-align: center;
	display: block;
	font-size: 24px;
	padding: 18px;
	color: #999;
	}
	
#data  .more{
	text-decoration: none;
	}
#data  .more:hover{
	text-decoration: underline;
	}


#data .key.string:before, #data .key.string:after{
	content: '';
	}
#data .string:before, #data .string:after{
	content: '"';
	display: inline;
	}

#data .string{
	color: #C00;
	}

#data .integer, #data .number{
	color: #006;
	}
	
#data .float, #data .double{
	color: #069;
	}

#data .class-info{
	color: #A55;/*hehe*/
	font-style: italic;
	padding-left: 10px;
	}

#data .boolean{
	color: #066;
	}

#data .null{
	color: #003;
	}

#data .object{
	color: #060;
	}

#data .resource{
	color: #404;
	}

#data .unknown{
	color: #404;
	}

#data .public, #data .private, #data .protected{
	font-style: italic;
	padding: 0 5px;
	}

#data .value{
	padding: 0 0 0 5px;
	}



#data  .key.more:before{
	content: '+';
	display: inline-block;
	}

#data .key{
	font-weight: bold;
	width: 200px;
	display: inline-block;
	overflow: hidden;
	}

#data .key.string{
	color: #060;
	}
#data .key.number{
	color: #900;
	}
	

